--- a/power_of_words/pubspec.yaml
+++ b/power_of_words/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^3.3.7
   firebase_database: ^9.0.6
   provider: ^4.3.2+1
+  cloud_firestore: ^3.1.10
 
 dev_dependencies:
   flutter_test:
