--- a/power_of_words/pubspec.yaml
+++ b/power_of_words/pubspec.yaml
@@ -39,8 +39,11 @@ dependencies:
   firebase_database: ^9.0.6
   provider: ^4.3.2+1
   cloud_firestore: ^3.1.10
+  
 
 dev_dependencies:
+  
+  
   flutter_test:
     sdk: flutter
 
@@ -49,7 +52,11 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
+  mockito: ^5.1.0
   flutter_lints: ^1.0.0
+  rxdart: ^0.27.3
+  firebase_auth_mocks: ^0.8.2
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
