--- a/power_of_words/pubspec.yaml
+++ b/power_of_words/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   firebase_core: ^1.12.0
   firebase_auth: ^3.3.7
   firebase_database: ^9.0.6
-  provider: ^4.3.2+1
+  provider: ^6.0.2
   cloud_firestore: ^3.1.10
   
 
