--- a/power_of_words/pubspec.yaml
+++ b/power_of_words/pubspec.yaml
@@ -36,14 +36,16 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.12.0
   firebase_auth: ^3.3.7
+  firebase_auth_web: ^3.3.9
   firebase_database: ^9.0.6
-  provider: ^4.3.2+1
+  provider: ^6.0.2
   cloud_firestore: ^3.1.10
   fake_cloud_firestore: ^1.2.1
   firebase_storage_mocks: ^0.5.0
   firebase_auth_mocks: ^0.8.2
   google_sign_in_mocks: ^0.2.1
   mocktail: ^0.3.0
+  firebase_database_mocks: ^0.3.2
 
 dev_dependencies:
   flutter_test:
