--- a/power_of_words/pubspec.yaml
+++ b/power_of_words/pubspec.yaml
@@ -39,7 +39,10 @@ dependencies:
   firebase_database: ^9.0.6
   provider: ^6.0.2
   cloud_firestore: ^3.1.10
-  
+  font_awesome_flutter: ^10.1.0
+  flutter_svg: ^1.0.3
+  animations: ^2.0.2
+  timelines: ^0.1.0
 
 dev_dependencies:
   
