--- a/power_of_words/pubspec.yaml
+++ b/power_of_words/pubspec.yaml
@@ -42,7 +42,10 @@ dependencies:
   font_awesome_flutter: ^10.1.0
   flutter_svg: ^1.0.3
   animations: ^2.0.2
-  timelines: ^0.1.0
+  timeline_tile: ^2.0.0
+  loading: 
+    git: https://github.com/bradintheusa/loading
+  intl: ^0.17.0
 
 dev_dependencies:
   
