--- a/power_of_words/pubspec.yaml
+++ b/power_of_words/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   loading: 
     git: https://github.com/bradintheusa/loading
   intl: ^0.17.0
+  dart_sentiment: ^0.0.9
+  inview_notifier_list: ^3.0.0
+  rect_getter: ^1.1.0
 
 dev_dependencies:
   
