adding animation to FAB

--- a/power_of_words/pubspec.yaml
+++ b/power_of_words/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   dart_sentiment: ^0.0.9
   inview_notifier_list: ^3.0.0
   rect_getter: ^1.1.0
+  visibility_detector: ^0.2.2
 
 dev_dependencies:
   
