change sentimental darrt

--- a/power_of_words/pubspec.yaml
+++ b/power_of_words/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   inview_notifier_list: ^3.0.0
   rect_getter: ^1.1.0
   visibility_detector: ^0.2.2
+  sentiment_dart: ^0.0.5
 
 dev_dependencies:
   
