change scaling add dropdown
 change scaling add drop down add prevent go foward without enter something

--- a/power_of_words/pubspec.yaml
+++ b/power_of_words/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   rect_getter: ^1.1.0
   visibility_detector: ^0.2.2
   sentiment_dart: ^0.0.5
+  dropdown_button2: ^1.4.0
 
 dev_dependencies:
   
